LPD-65332 just go back to ranges since otherwise we are trying to re-use one port for multiple services

--- a/build.gradle
+++ b/build.gradle
@@ -164,26 +164,7 @@ file("ports.env").withInputStream {
 
 	ports.load(portsFile)
 
-	environmentMap.putAll ports.collectEntries {
-		key, value ->
-
-		if (!value.contains("-")) {
-			return [key, value as Integer]
-		}
-
-		String[] parts = value.split("-")
-
-		Integer portLowest = parts[0] as Integer
-		Integer portHighest = parts[1] as Integer
-
-		Integer availablePort = getFirstAvailablePort(portLowest, portHighest)
-
-		if (availablePort == null) {
-			throw new IOException("No free port found in range: ${value}. Please shut down other projects, or expand the port range in the ports.env file.");
-		}
-
-		return [key, availablePort as Integer]
-	}
+	environmentMap.putAll ports
 }
 
 file('.env').withOutputStream {
@@ -210,10 +191,7 @@ dockerCompose {
 	// DEBUG: Set to false to retain volume data on restart
 	removeVolumes = config.clearVolumeData
 
-	tcpPortsToIgnoreWhenWaiting = [
-		environmentMap['LIFERAY_DEBUG_PORT'],
-		environmentMap['LIFERAY_GOGO_SHELL_PORT'],
-	]
+	tcpPortsToIgnoreWhenWaiting = [8000, 11311]
 
 	useComposeFiles = config.composeFiles
 
