--- a/ports.env
+++ b/ports.env
@@ -8,5 +8,8 @@ DATABASE_PORT=54321-54330
 ELASTICSEARCH_HTTP_PORT=9200-9209
 ELASTICSEARCH_TRANSPORT_PORT=9300-9309
 
+MAIL_WEB_PORT=1080
+MAIL_SMTP_PORT=1025
+
 WEBSERVER_HTTP_PORT=80
 WEBSERVER_HTTPS_PORT=443
