LPD-55579 unrelated: do not share the contents of the dumps folder

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ tasks.register("shareWorkspace", Zip) {
 	exclude ".git"
 	exclude ".gradle"
 	exclude "binds"
+	exclude "dumps/*"
 	exclude "shared_workspaces"
 	exclude {
 		FileTreeElement fileTreeElement ->
