--- a/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
+++ b/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
@@ -2,8 +2,6 @@ import com.liferay.docker.workspace.environments.Util
 
 import de.undercouch.gradle.tasks.download.Download
 
-import groovy.json.JsonSlurper
-
 import groovy.xml.XmlSlurper
 import groovy.xml.slurpersupport.GPathResult
 
@@ -292,11 +290,7 @@ tasks.register("listAdminUsers") {
 	Closure<Void> listAdminUsersForCompany = {
 		String companyId, String hostname, String webId, String schema ->
 
-		JsonSlurper jsonSlurper = new JsonSlurper()
-
-		String networkPorts = waitForCommand("docker inspect ${config.namespace}-liferay --format '{{ json .NetworkSettings.Ports }}'")
-
-		String tcp8080Port = jsonSlurper.parseText(networkPorts)["8080/tcp"][0]["HostPort"]
+		String tcp8080Port = waitForCommand("docker compose ps liferay --format '{{range .Publishers}}{{if and (eq .URL \"0.0.0.0\") (eq .TargetPort 8080)}}{{.PublishedPort}}{{end}}{{end}}'")
 
 		List results = executeSQLQuery("select screenName, emailAddress from User_ where companyId = ${companyId} and userId in (select userId from Users_Roles where roleId in (select roleId from Role_ where name = 'Administrator'))", schema)
 
