--- a/gradle.properties
+++ b/gradle.properties
@@ -44,7 +44,7 @@ lr.docker.environment.service.enabled[elasticsearch]=false
 lr.docker.environment.service.enabled[liferay]=true
 lr.docker.environment.service.enabled[mail]=false
 lr.docker.environment.service.enabled[mariadb]=false
-lr.docker.environment.service.enabled[mysql]=false
+lr.docker.environment.service.enabled[mysql]=true
 lr.docker.environment.service.enabled[postgres]=false
 lr.docker.environment.service.enabled[webserver_http]=false
 lr.docker.environment.service.enabled[webserver_https]=false
