LPD-68046 fixes git show error
Since all the config files in that directory are so similar to one another, use
--find-renames=100% to only consider commits that touch that file exactly based
on name, not content.

--- a/buildSrc/src/main/groovy/docker-database-saas.gradle
+++ b/buildSrc/src/main/groovy/docker-database-saas.gradle
@@ -311,7 +311,7 @@ ext {
 		Map<String, String> latestReleaseInfo = null
 		String latestReleaseInfoDate = null
 
-		waitForCommand("git log -5 --pretty='%H %cd' --date=format-local:'%Y-%m-%d %H:%M:%S %Z' -- ${descriptorPath}", lxcRepositoryFolder).eachLine {
+		waitForCommand("git log -5 --pretty='%H %cd' --date=format-local:'%Y-%m-%d %H:%M:%S %Z' --find-renames=100% -- ${descriptorPath}", lxcRepositoryFolder).eachLine {
 			String line ->
 
 			int pos = line.indexOf(" ")
